--- a/ruma-identity-service-api/Cargo.toml
+++ b/ruma-identity-service-api/Cargo.toml
@@ -12,3 +12,8 @@ edition = "2018"
 
 [dependencies]
 ruma-api = { version = "=0.17.0-alpha.1", path = "../ruma-api" }
+ruma-common = { version = "0.2.0", path = "../ruma-common" }
+ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
+ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
+serde = { version = "1.0.114", features = ["derive"] }
+serde_json = "1.0.57"
